[gd_scene load_steps=12 format=3 uid="uid://ciwrsfwu27kyo"]

[ext_resource type="Texture2D" uid="uid://dwcg5fhei73v5" path="res://Sprites/chameleon.png" id="1_xtbmj"]
[ext_resource type="Texture2D" uid="uid://b8prqluvwkji8" path="res://Sprites/arrow.png" id="2_jabux"]
[ext_resource type="Script" uid="uid://diqm7knryoc7t" path="res://indicator.gd" id="3_prowl"]
[ext_resource type="Texture2D" uid="uid://j23i6wdiiniv" path="res://Sprites/tongue_tile.png" id="4_ntuaw"]
[ext_resource type="Texture2D" uid="uid://b6d1ynj2ik6lq" path="res://Sprites/icon.svg" id="4_unrpb"]
[ext_resource type="Texture2D" uid="uid://p36lrnq5ed5c" path="res://Sprites/tongue_end.png" id="5_ntuaw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jabux"]
atlas = ExtResource("1_xtbmj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prowl"]
atlas = ExtResource("1_xtbmj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oajcp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jabux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prowl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_prowl"]
radius = 2.90909

[sub_resource type="CircleShape2D" id="CircleShape2D_oajcp"]
radius = 3.0

[node name="Player" type="Node2D"]

[node name="Chameleon" type="AnimatedSprite2D" parent="."]
z_index = 10
scale = Vector2(3.2, 3.2)
sprite_frames = SubResource("SpriteFrames_oajcp")

[node name="Indicator" type="Sprite2D" parent="."]
z_index = -2
scale = Vector2(1.1, 1.599)
texture = ExtResource("2_jabux")
script = ExtResource("3_prowl")

[node name="IndicatorTip" type="Area2D" parent="Indicator"]
position = Vector2(0, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Indicator/IndicatorTip"]
shape = SubResource("CircleShape2D_prowl")

[node name="RayCast2D" type="RayCast2D" parent="Indicator"]
visible = false
scale = Vector2(1.45455, 1)
collision_mask = 2

[node name="RayCastCollision" type="Sprite2D" parent="Indicator/RayCast2D"]
visible = false
scale = Vector2(0.208333, 0.208333)
texture = ExtResource("4_unrpb")

[node name="Tongue" type="Line2D" parent="."]
z_index = -1
width = 120.0
texture = ExtResource("4_ntuaw")
texture_mode = 1

[node name="TongueHitBox" type="Area2D" parent="."]
position = Vector2(0, -18)
scale = Vector2(1.2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueHitBox"]
self_modulate = Color(1, 0.246, 0.13, 1)
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_oajcp")

[node name="Sprite2D" type="Sprite2D" parent="TongueHitBox"]
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_ntuaw")

[connection signal="area_entered" from="TongueHitBox" to="Indicator" method="_on_tongue_hit_box_area_entered"]
